--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 # This file lists all individuals having contributed content to the repository.
-
-
+Esraa Alaa <asraaalaa2050@gmail.com>
+Omar Alghareeb <omarmarsedesmaclaren@gmail.com>
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
